# Arquitectura

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  roadmap.md
backend_fastapi/: main.py  pyproject.toml
backend_fastapi/api/: deps.py
backend_fastapi/api/routes/: tareas.py
core/: pyproject.toml
core/application/: crear_tarea.py  editar_tarea.py  eliminar_tarea.py  listar_tareas.py
core/domain/models/: tarea.py
core/domain/ports/: tarea_repository.py
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: app.js
infrastructure/: container.py  pyproject.toml
infrastructure/dual/: README.md  circuit_breaker.py  retry.py
infrastructure/dual/repository/: tarea_repository.py
infrastructure/mongo/: README.md  __init__.py  client.py  tarea_repository.py
infrastructure/mongo/models/: tarea.py
infrastructure/mongo/repository/: tarea_repository.py
infrastructure/mongo/session/: client.py
infrastructure/peewee/: README.md
infrastructure/peewee/model/: models.py
infrastructure/peewee/repository/: tarea_repository.py
infrastructure/peewee/session/: db.py
infrastructure/sqlalchemy/: README.md
infrastructure/sqlalchemy/model/: models.py
infrastructure/sqlalchemy/repository/: tarea_repository.py
infrastructure/sqlalchemy/session/: db.py
test/: test_circuit_breaker.py  test_core_use_cases.py  test_dual_repository.py  test_mongo_repository.py  test_peewee_repository.py  test_sqlalchemy_repository.py
