[project]
name = "arquitectura-mejorada"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.6",
    "flask>=3.1.2",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "sqlalchemy>=2.0.46",
    "psycopg2" = "2.9.9",
    "uvicorn>=0.40.0"
]
